# perfume_reco

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: cleaned_perfume_notes.txt
models/: clustering.pkl  model_kmeans_k7_metric0.03_date20250217.pkl  model_kmeans_k7_metric0.03_date20250219.pkl
models/rod/: model_kmeans_k7_metric0.03_date20250217.pkl
notebooks/: PR_FINAL.ipynb  PR_kmeans2_rod.ipynb  PR_kmeans_rod.ipynb  sample.ipynb
perfume_reco/: app.py
utils/: fetch_data.py
