[tool.poetry]
name = "perfume-reco"
version = "0.1.0"
description = ""
authors = ["rajkyutiebaby <rodneyestrada2425@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.2"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
streamlit = "^1.42.0"
seaborn = "^0.13.2"
optuna = "^4.2.1"
hyperopt = "^0.2.7"
ipykernel = "^6.29.5"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
